--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,3 +1,15 @@
+body {
+    background-color: black;
+    margin: 0;
+    padding: 0;
+}
+
+canvas {
+    display: block;
+    margin: 0 auto;
+    padding: 0;
+}
+
 .main {
     position: absolute;
     top: 0;
@@ -19,4 +31,13 @@
 
 h2 {
     color: #fff;
+}
+
+@media only screen and (max-width: 600px) {
+    .main {
+        margin: 1em 0;
+        overflow-x: hidden;
+        overflow-y: auto;
+        scroll-behavior: smooth;
+    }
 }
