--- a/modules/pageBuilders/templates/userPage.html
+++ b/modules/pageBuilders/templates/userPage.html
@@ -2,15 +2,30 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>$$Username | Profile</title>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/assets/local/css/main" />
+    <title>%%Username | gooch.dev</title>
 </head>
 
 <body>
+    <canvas id="canvas"></canvas>
 
-
+    <div class="main">
+        <h1 class="">%%Username</h1>
+        <h2 class="">%%ID</h2>
+    </div>
+    <script src="/assets/local/js/bg"></script>
 </body>
+
+<style>
+    body {
+        background-color: #000;
+        margin: 0;
+        padding: 0;
+        overflow: hidden;
+    }
+</style>
 
 </html>
